# cpp-dabbling

log4cxx_test/: CMakeLists.txt  gserial.cpp  gserial_test.cpp  logtest.cpp  sleep.h  tmp.cpp
qt_logging_test/: .gitattributes  .gitignore  CMakeLists.txt  VS2008Toolchain.cmake  log.txt  logtest.cpp  runit.sh  sleep.cpp  sourceme.sh
qt_logging_test/cmake/: LinuxArm64Toolchain.cmake  T30LinuxArm32.cmake  ToolchainARMV5T.cmake  ToolchainTest.cmake  VS2008Toolchain.cmake  VS2008ToolchainColibriARMV4I.cmake  VS2015Toolchain.cmake
qt_logging_test/test/: CMakeLists.txt  tests.cpp
